fix bubble overflow and vertical scroll

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -5,7 +5,8 @@
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     position: relative;
-    width: 100%;
+    margin: 0 auto;
+    width: 80%;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 100%;
