--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -1,14 +1,19 @@
 .main-skills {
-    margin: 95px auto;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box; 
+    margin-top: 90px;
+    padding: 20px 0;
     height: 85vh;
-    width: 80vw;
+    width: 100vw;
     /* border: 2px solid #ff0000; */
     /* min-width: 500px; */
     /* display: flex; */
     flex-direction: column;
     align-items: flex-start;
-    overflow-x: visible;
-    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* padding: 20px; */
     z-index: -1;
 }
 
@@ -19,7 +24,8 @@
 .cards {
     /* margin: 150px 0 100px 0; */
     position: relative;
-    width: 100%;
+    width: 80%;
+    margin: auto;
     /* display: inline-flex;
     flex-direction: column;
     align-content: flex-start; */
